daylight-equation/fixtures/daylight-v06-m1/vectors/negative/N19_bad_downgrade/h1.hex
e7cf35fd6f968a98df6e9e6878da4e9fcb5dda74f39d680903efa5b4381c83119e60b001ff25448c79ceb8685b471fd4e10afb055f2743da948397ca21adfab3
